hello-world-service-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-1
  annotations:
    cloud.google.com/backend-config: '{"ports": {"public":"public-backend"}}'
spec:
  type: NodePort
  selector:
    greeting: hello
    version: one
  ports:
  - protocol: TCP
    name: public
    port: 60000
    targetPort: 50000
  - protocol: TCP
    name: private
    port: 60001
    targetPort: 50000
